[package]
name = "blog_os"
version = "0.1.0"
authors = ["roy.lieu <roy.lieu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.6.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

